--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,6 @@ stages:
         provider: 'azurerm'
         command: 'apply'
         workingDirectory: '$(System.DefaultWorkingDirectory)/Environment/dev'
-        commandOptions: '-auto-approve'
+        commandOptions: '--auto-approve'
         environmentServiceNameAzureRM: 'soumyadummy'
         environmentAzureRmOverrideSubscriptionID: '18bbb1ca-f79e-49b4-8669-5a1208da00f7'
