--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,27 @@ stages:
         command: 'plan'
         workingDirectory: '$(System.DefaultWorkingDirectory)/Enviornment/dev'
         environmentServiceNameAzureRM: 'soumyadummy'
+
+
+- stage: TerraformApply
+  displayName: Terraform apply
+  jobs:
+  - job: Terraformapply
+    displayName: ToDo Infra
+    steps:
+
+    - task: TerraformTaskV4@4
+      displayName: Terraform Init
+      inputs:
+        provider: 'azurerm'
+        command: 'init'
+        workingDirectory: '$(System.DefaultWorkingDirectory)/Enviornment/dev'
+        backendServiceArm: 'soumyadummy'
+        backendAzureRmOverrideSubscriptionID: '18bbb1ca-f79e-49b4-8669-5a1208da00f7'
+        backendAzureRmResourceGroupName: 'rg-terraform-backends'
+        backendAzureRmStorageAccountName: 'tfbackendstorage321'
+        backendAzureRmContainerName: 'tfstate'
+        backendAzureRmKey: 'soumya.terraform.tfstate'
     - task: TerraformTask@5
       displayName: Terraform apply
       inputs:
